all tests passing

--- a/aos_pintos/src/Make.config
+++ b/aos_pintos/src/Make.config
@@ -66,7 +66,7 @@ LDFLAGS += -Wl,--build-id=none
 #endif
 
 %.o: %.c
-	$(CC) -c $< -o $@ $(CFLAGS) $(CPPFLAGS) $(WARNINGS) $(DEFINES) $(DEPS)
+	$(CC) -c $< -o $@ $(CFLAGS) $(CPPFLAGS) $(WARNINGS) $(DEFINES) $(EXTRA) $(DEPS)
 
 %.o: %.S
 	$(CC) -c $< -o $@ $(ASFLAGS) $(CPPFLAGS) $(DEFINES) $(DEPS)
